--- a/src/resource/views/admin.hbs
+++ b/src/resource/views/admin.hbs
@@ -40,9 +40,9 @@
         justify-content: center;
         letter-spacing: .4px;
         line-height: 1;
-        min-width: 210px;
-        padding-left: 20px;
-        padding-right: 20px;
+        min-width: 214px;
+        padding-left: 16px;
+        padding-right: 16px;
         padding-top: 3px;
         text-decoration: none;
         text-transform: uppercase;
@@ -99,8 +99,7 @@
         <!-- HTML of button src: https://getcssscan.com/css-buttons-examples!-->
         <div class="row mt-4">
             <div class="list__button d-flex justify-content-around flex-wrap">
-                <a href="/admin/quan-ly-tai-khoan" class="button-75" role="button"><span class="text">Quản lý tài
-                        khoản</span></a>
+                <a href="/admin/quan-ly-tai-khoan" class="button-75" role="button"><span class="text">Quản lý thành viên</span></a>
                 <a href="/admin/quan-ly-phim" class="button-75" role="button"><span class="text">Quản lý phim</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý vé</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý phòng</span></a>
@@ -110,7 +109,7 @@
 
         <div class="row mt-4">
             <div class="list__button d-flex justify-content-around flex-wrap">
-                <a href="#" class="button-75" role="button"><span class="text">Quản lý tin tức</span></a>
+                <a href="/admin/phan-hoi" class="button-75" role="button"><span class="text">Quản lý phản hồi</span></a>
                 <a href="#" class="button-75" role="button"><span class="text">Quản lý khuyến mãi</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý combo</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý hóa đơn</span></a>
