--- a/src/resource/views/policy.hbs
+++ b/src/resource/views/policy.hbs
@@ -308,49 +308,6 @@
             </div>
 
             <div class="col-md-4 col-sm-4 col-xs-12 ">
-                <div class="buyTicketFast">
-                    <div class="title">
-                        <span id="text__buyfast">MUA VÉ NHANH</span>
-                    </div>
-
-                    <div class="sl-all">
-
-                        <select name="" id="" class="sl">
-                            <option value="" disabled selected hidden>Chọn phim</option>
-                            <option value="">Tây du ký</option>
-                            <option value="">Đi tìm nemo</option>
-                            <option value="">Doraemon</option>
-                        </select>
-
-
-                        <select name="" id="" class="sl">
-                            <option value="" disabled selected hidden>Chọn rạp</option>
-                            <option value="">Rạp 1</option>
-                            <option value="">Rạp 2</option>
-                            <option value="">Rạp 3</option>
-                        </select>
-
-
-
-                        <select name="" id="" class="sl">
-                            <option value="" disabled selected hidden>Chọn ngày</option>
-                            <option value="">13/3/2023</option>
-                            <option value="">14/3/2023</option>
-                            <option value="">15/3/2023</option>
-                        </select>
-
-                        <select name="" id="" class="sl">
-                            <option value="" disabled selected hidden>Chọn suất</option>
-                            <option value="">Suất 1</option>
-                            <option value="">Suất 2</option>
-                            <option value="">Suất 3</option>
-                        </select>
-
-                        <div class="mua-ve-btn">
-                            <button class="mua-ve">MUA VÉ</button>
-                        </div>
-                    </div>
-                </div>
 
 
                 <h4 class="mua-ve-nhanh">PHIM ĐANG CHIẾU</h4>
@@ -382,7 +339,7 @@
                 </div>
 
                 <div class="xem-them-btn">
-                    <button class="xem-them">XEM THÊM</button>
+                    <a href="/phim-dang-chieu" class="btn btn-primary xem-them">XEM THÊM</a>
                 </div>
 
             </div>
