--- a/src/resource/views/support.hbs
+++ b/src/resource/views/support.hbs
@@ -17,14 +17,14 @@
     <div class="container">
         <div class="row cover">
             <div class="col-md-1"></div>
-            <div class="col-md-7">
+            <div class="col-md-8">
                 <!--Section: Contact v.2-->
                 <section class="mb-4">
                     <!--Section heading-->
                     <h2 class="h1-responsive font-weight-bold text-center my-4">LIÊN HỆ VỚI CHÚNG TÔI</h2>
                     <!--Section description-->
                     <p class="text-center w-responsive mx-auto mb-5">Bạn có câu hỏi nào không? Xin đừng ngần ngại liên
-                        hệ trực tiếp với LDBT Cinema nhé.</p>
+                        hệ trực tiếp với L2DBT Cinema nhé.</p>
 
                     <div class="row">
 
@@ -48,7 +48,7 @@
                                     <!--Grid column-->
                                     <div class="col-md-6">
                                         <div class="md-form mb-0">
-                                            <label for="phone" class="">Số điện thoại của bạn</label>
+                                            <label for="phone" class="">Email liên hệ</label>
                                             <input type="text" id="phone" name="phone" class="form-control">
                                         </div>
                                     </div>
@@ -96,7 +96,7 @@
                                 </div>
 
                                 <div class="form-group mt-3">
-                                    <button id="btnSubmit" class="btn btn-primary px-3" type="submit">GỬI</button>
+                                    <button id="btnSubmit" class="btn btn-primary px-3 float-right" type="submit">GỬI</button>
                                 </div>
 
                                 <div class="status"></div>
@@ -109,7 +109,7 @@
                         <div class="col-md-12 text-center mt-4">
                             <ul class="list-unstyled mb-0 d-flex justify-content-between">
                                 <li class="d-flex"><i class="fa fa-map-marker" style="margin-top: 4px;"></i>
-                                    <p class="ml-2">90 Nguyễn Thị Thập, Q7, HCMC</p>
+                                    <p class="ml-2">90 Nguyễn Thị Thập, Q7, HCM</p>
                                 </li>
 
                                 <li class="d-flex"><i class="fa fa-phone" style="margin-top: 4px;"></i>
@@ -129,7 +129,7 @@
                 <!--Section: Contact v.2-->
             </div>
 
-            <div class="col-md-3 right">
+            <div class="col-md-3 right d-none">
                 <div class="quick-buy-ticket">
                     <h4>MUA VÉ NHANH</h4>
                 </div>
