--- a/src/resource/views/admin.hbs
+++ b/src/resource/views/admin.hbs
@@ -113,7 +113,7 @@
                 <a href="#" class="button-75" role="button"><span class="text">Quản lý khuyến mãi</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý combo</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý hóa đơn</span></a>
-                <a class="button-75" role="button"><span class="text">Quản lý suất chiếu</span></a>
+                <a href="/admin/suat-chieu" class="button-75" role="button"><span class="text">Quản lý suất chiếu</span></a>
             </div>
         </div>
 
