--- a/src/resource/views/admin.hbs
+++ b/src/resource/views/admin.hbs
@@ -102,7 +102,7 @@
                 <a href="/admin/quan-ly-tai-khoan" class="button-75" role="button"><span class="text">Quản lý thành viên</span></a>
                 <a href="/admin/quan-ly-phim" class="button-75" role="button"><span class="text">Quản lý phim</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý vé</span></a>
-                <a class="button-75" role="button"><span class="text">Quản lý phòng</span></a>
+                <a href="/admin/quan-ly-phong" class="button-75" role="button"><span class="text">Quản lý phòng</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý ghế</span></a>
             </div>
         </div>
@@ -111,7 +111,7 @@
             <div class="list__button d-flex justify-content-around flex-wrap">
                 <a href="/admin/phan-hoi" class="button-75" role="button"><span class="text">Quản lý phản hồi</span></a>
                 <a href="/admin/quan-ly-khuyen-mai" class="button-75" role="button"><span class="text">Quản lý khuyến mãi</span></a>
-                <a class="button-75" role="button"><span class="text">Quản lý combo</span></a>
+                <a href="/admin/quan-ly-combo" class="button-75" role="button"><span class="text">Quản lý combo</span></a>
                 <a class="button-75" role="button"><span class="text">Quản lý hóa đơn</span></a>
                 <a href="/admin/suat-chieu" class="button-75" role="button"><span class="text">Quản lý suất chiếu</span></a>
             </div>
